Fix feature image overflow on mobile
Fixed overflow issue for Pollo Campero feature image on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ Date Created: 11/02/2025
 Date Due: 12/01/2024
 Modified: 12/08/2025 (Single-Line Horizontal Header Toolbar)
 Modified: 12/09/2025 (Hero Image Object Position adjustment)
+Modified: 12/12/2025 (Fix for Pollo Campero Feature Image overflow on mobile)
 Filename: style.css
 Purpose: Global stylesheet for all Tienda Salvadoreña pages - nostalgic, cultural theme with unified header and navigation.
 Editor: Notepad
@@ -816,7 +817,6 @@ main {
 }
 
 .feature-image figure { 
-  display: inline-block; 
   max-width: 100%; 
   width: 100%;
 }
